force-app/main/default/objects/Test_Schedule_Class__c/Test_Schedule_Class__c.object-meta.xml
<CustomObject>
    <label>Test Schedule Class</label>
    <nameField>
        <displayFormat>TSC-{0000}</displayFormat>
        <label>Test Schedule Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Schedule Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>