force-app/main/default/objects/Test_Schedule_Class__c/fields/Apex_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Id__c</fullName>
    <label>Apex Class Id</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
    <description
  >Id of the ApexClass to include in the scheduled run. ApexClass cannot be a custom lookup target, so the Id/Name are stored as plain fields. Not required at the metadata level (so permission-set field permissions can be granted on it - Salesforce disallows fieldPermissions entries for required fields); populated-ness is validated in TestSchedulerService.</description>
</CustomField>