force-app/main/default/objects/Test_Schedule_Class__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description
  >Denormalized ApexClass name captured at selection time, for display without an extra query. Not required at the metadata level so a permission-set field permission can be granted (see Apex_Class_Id__c).</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>