force-app/main/default/objects/Test_Schedule_Class__c/fields/Test_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Test_Schedule__c</fullName>
    <label>Test Schedule</label>
    <type>MasterDetail</type>
    <referenceTo>Test_Schedule__c</referenceTo>
    <relationshipName>Test_Schedule_Classes</relationshipName>
    <relationshipLabel>Test Schedule Classes</relationshipLabel>
</CustomField>